# mavros_controllers

./: terminal_setup.sh  terminal_setup2.sh  terminal_setup3.sh
controller_msgs/msg/: FlatTarget.msg
flat_waypoint_publisher/: CMakeLists.txt  flat_publisher.py  package.xml
geometric_controller/: setup_custom_pythonpath.sh
geometric_controller/include/geometric_controller/: geometric_controller.h
geometric_controller/launch/: rgbd_config_file.rviz  sitl_trajectory_track_circle.launch  sitl_trajectory_track_manual.launch  sitl_trajectory_track_manual_2.launch  sitl_trajectory_track_manual_3.launch  sitl_trajectory_track_manual_input.launch  stereo_config_file.rviz
geometric_controller/src/: geometric_controller.cpp  geometric_controller_node.cpp
mavros_controllers/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
mavros_controllers/atomic_configure/: setup.sh
mavros_controllers/catkin_generated/: generate_cached_setup.py  setup_cached.sh
mavros_controllers/devel/: .catkin  .rosinstall  local_setup.sh
mavros_controllers/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mavros_controllers/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
trajectory_publisher/: package.xml
trajectory_publisher/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
trajectory_publisher/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
trajectory_publisher/launch/: sitl_trajectory_setpoint_raw.launch  sitl_trajectory_setpoint_traj.launch  sitl_trajectory_setpointraw.launch
trajectory_publisher/src/: polynomialtrajectory.cpp  shapetrajectory.cpp  trajectoryPublisher.cpp
(+10 files in other folders)
